                                                         -*- coding: utf-8 -*-
Changes with Apache 2.5.0

  *) mod_systemd: New module, for integration with systemd on Linux.
     [Jan Kaluza <jkaluza redhat.com>]

  *) core: ErrorDocument now works for requests without a Host header.
     PR 48357.  [Jeff Trawick]

  *) --with-module: Fix failure to integrate them into some existing
     module directories.  PR 40097.  [Jeff Trawick]

  *) mod_headers: New params: %l for load averages, %i for an
     idle percentage rating of httpd, and %b for a busy percentage
     rating. [Jim Jagielski]

  *) core: New functions to obtain load parameters: ap_get_sload()
     and ap_get_loadavg(). [Jim Jagielski]

  *) mod_cache_socache: New cache implementation backed by mod_socache
     that replaces mod_mem_cache removed from httpd v2.2. [Graham
     Leggett]

  *) mod_auth_form: Support the expr parser in the
     AuthFormLoginRequiredLocation, AuthFormLoginSuccessLocation and
     AuthFormLogoutLocation directives. [Graham Leggett]

  *) core: Add dirwalk_stat and pre_htaccess hooks, allowing mpm-itk
     to be used without patches to httpd core.  [Jeff Trawick]

  *) mod_proxy: Allow for persistence of local changes (via the
     balancer-manager) between graceful and normal restarts.
     [Jim Jagielski]

  *) mod_slotmem: New provider function, fgrab(), which forces an
     allocation of a slot. [Jim Jagielski]

  *) mod_proxy_balancer: The nonce is only derived from the UUID iff
     not set via the 'nonce' balancer param. [Jim Jagielski]

  *) mod_lua: Add LuaInputFilter/LuaOutputFilter for creating content
     filters in Lua [Daniel Gruno]

  *) core: Apply length limit when logging Status header values.
     [Jeff Trawick, Chris Darroch]

  *) mod_ssl: Match wildcard SSL certificate names in proxy mode.  
     PR 53006.  [Joe Orton]

  *) WinNT MPM: Store pid and generation for each thread in scoreboard